<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/include_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.chuxin.wechat.fake.views.ui.CellView
                android:id="@+id/cv_cell_from_warehouse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cellLabel="@string/text_deliver_from_warehouse"
                app:cellValue="@string/text_cell_placeholder"
                app:showArrow="true"
                app:showDivider="true" />

            <com.chuxin.wechat.fake.views.ui.CellView
                android:id="@+id/cv_cell_hint_scan_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cellLabel="@string/text_deliver_receiver_info"
                app:cellValue="@string/text_deliver_scan_code" />

            <LinearLayout
                android:id="@+id/ll_order_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/rl_receiver_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:padding="@dimen/padding_middle">

                    <TextView
                        android:id="@+id/tv_receiver_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_color_primary" />

                    <TextView
                        android:id="@+id/tv_receiver_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:textColor="@color/text_color_secondary" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_receiver_name"
                        android:layout_marginTop="@dimen/margin_middle"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/iv_location"
                            android:layout_width="@dimen/icon_middle"
                            android:layout_height="@dimen/icon_middle"
                            android:src="@mipmap/ic_location"
                            android:tint="@color/text_color_secondary" />

                        <TextView
                            android:id="@+id/tv_receiver_address"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_marginLeft="@dimen/margin_small"
                            android:textColor="@color/text_color_secondary" />

                    </LinearLayout>

                </RelativeLayout>

                <com.chuxin.wechat.fake.views.ui.CellView
                    android:id="@+id/cv_cell_order_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_middle"
                    app:cellLabel="@string/text_order_code"
                    app:showDivider="true" />

                <com.chuxin.wechat.fake.views.ui.CellView
                    android:id="@+id/cv_cell_order_state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cellLabel="@string/text_order_state"
                    app:showDivider="true" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_order_products"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:overScrollMode="never" />

                <com.chuxin.wechat.fake.views.ui.CellView
                    android:id="@+id/tv_remark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_middle"
                    app:cellLabel="商家备注:" />

                <Button
                    android:id="@+id/btn_deliver"
                    style="@style/PrimaryButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_huge"
                    android:layout_marginRight="@dimen/margin_huge"
                    android:layout_marginTop="@dimen/margin_large"
                    android:layout_marginBottom="@dimen/margin_large"
                    android:text="@string/text_deliver_complete" />

            </LinearLayout>


            <!--<Button-->
                <!--android:id="@+id/btn_deliver"-->
                <!--style="@style/PrimaryButton"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginLeft="@dimen/margin_huge"-->
                <!--android:layout_marginRight="@dimen/margin_huge"-->
                <!--android:layout_marginTop="@dimen/margin_large"-->
                <!--android:layout_marginBottom="@dimen/margin_large"-->
                <!--android:text="@string/text_deliver_complete" />-->


        </LinearLayout>

    </ScrollView>

</LinearLayout>